# sejm-network-analysis

./: .gitignore  CONCLUSIONS.md  PLAN.md  PREZENTACJA_NOTATKI.md  README.md  main.py  pyproject.toml
data/analysis/: assortativity.parquet  attendance_monthly.parquet  attendance_per_mp.parquet  birth_geography.parquet  bloc_affinity.parquet  bloc_summary.parquet  bridge_mps.parquet  centrality_correlations.parquet  centrality_rebels.parquet  education_by_party.parquet  kcore.parquet  migration_flows.parquet  monthly_polarization.parquet  mps_enriched.parquet  party_cohesion_by_month.parquet  party_cohesion_by_sitting.parquet  party_correlation_matrix.parquet  party_switchers.parquet  rebels.parquet  rich_club.parquet  small_world.parquet  spectral_embedding.parquet  strategic_absence.parquet  structural_balance.parquet  switch_summary.parquet  temporal_metrics.parquet  topic_club_cohesion.parquet  topic_coalition_split.parquet  topic_summary.parquet  tsne_embedding.parquet  voting_blocs.parquet  voting_topics.parquet  wild_cards.parquet
data/networks/: agreement_matrix.npy  communities_threshold_0_30_parquet  community_metrics.parquet  (+6 more)
latex_poster/: main.tex  sekcja1_methodology.tex  sekcja2_dynamics.tex  sekcja3_main_graph.tex  sekcja4_temporal.tex  sekcja4b_attendance.tex  sekcja5_bert.tex
specs/: 00_overview.md  01_data_fetching.md  02_network_cohesion.md  03_community_detection.md  04_party_cohesion.md  05_rebels.md  06_party_correlation.md  07_traitors.md  08_bertopic.md  09_temporal_network.md  10_centrality_rebels.md  11_voting_blocs.md
src/: config.py
(+3123 files in other folders)
