[project]
name = "sejm-network-analysis"
version = "0.1.0"
description = "Network analysis of Polish Sejm voting patterns"
requires-python = ">=3.12"
dependencies = [
    # HTTP / async
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    # Data
    "polars>=1.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scipy>=1.12",
    # Network analysis
    "networkx>=3.2",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    # ML / NLP
    "bertopic>=0.16",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    # Visualisation
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Utilities
    "tqdm>=4.66",
    "rich>=13.0",
    "click>=8.1",
    "orjson>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
